...
                }
                Spacer()
                Button {
                    let displayText = calc.calcBuffer(3)
                    answerText = displayText
                } label: {
                    Image(systemName: "3.circle.fill").font(.system(size: CGFloat(75)))
                }
                Spacer()
                Button {
                    calc.multiply()
                } label: {
                    Image(systemName: "multiply.circle.fill").foregroundColor(Color.orange).font(.system(size: CGFloat(75)))
...
                        answerText = String(Int(displayText))
                    } else {
                        answerText = String(displayText)
                    }
                    
                } label: {
                    Image(systemName: "equal.circle.fill").foregroundColor(Color.orange).font(.system(size: CGFloat(75)))
                }
                Spacer()

            }
        }
    }
...
